--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-table": "^8.10.7",
+    "@tremor/react": "^3.11.1",
     "@trpc/client": "^10.43.6",
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
